tests/expectations/compiler/slice/slice_inclusive_oob_fail.out
Error [ETYC0372177]: Slice range `0..9` is out of bounds for an array of length `8`.
    --> compiler-test:5:16
     |
   5 |         return a[0..=8];
     |                ^^^^^^^^
